src/test/ui/hkt/too_few_params.stderr
error[E0107]: this hkt parameter takes 2 generic arguments but 1 generic argument was supplied
  --> $DIR/too_few_params.rs:4:27
   |
LL | fn test<I<%J, %K>>(input: I<u32>) {}
   |                           ^ --- supplied 1 generic argument
   |                           |
   |                           expected 2 generic arguments
   |
note: hkt parameter defined here, with 2 generic parameters: `J`, `K`
  --> $DIR/too_few_params.rs:4:9
   |
LL | fn test<I<%J, %K>>(input: I<u32>) {}
   |         ^  -   -
help: add missing generic argument
   |
LL | fn test<I<%J, %K>>(input: I<u32, K>) {}
   |                                +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
